deploy/k8s/overlays/aws-prod/deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: assetledger
  namespace: assetledger
spec:
  template:
    spec:
      containers:
        - name: app
          imagePullPolicy: Always
